--- a/index.html
+++ b/index.html
@@ -40,19 +40,18 @@
           <label class="control-label" for="year">Year</label>
           <input type="text" class="form-control" id="year" />
         </div>
-        <a href="#" class="btn btn-info btn-block">Default button</a>
+        <a href="#" class="btn btn-info btn-block">Add Movie</a>
       </form>
       <table class="table table-striped table-hover" style="margin-top: 3rem">
         <thead>
           <tr>
-            <th>#</th>
             <th>Title</th>
             <th>Director</th>
             <th>Year</th>
             <th></th>
           </tr>
         </thead>
-        <tbody id="book-list"></tbody>
+        <tbody id="movie-list"></tbody>
       </table>
     </div>
 
