added submit and delete movies functionality

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <label class="control-label" for="year">Year</label>
           <input type="text" class="form-control" id="year" />
         </div>
-        <a href="#" class="btn btn-info btn-block">Add Movie</a>
+        <button type="submit" class="btn btn-info btn-block">Add Movie</button>
       </form>
       <table class="table table-striped table-hover" style="margin-top: 3rem">
         <thead>
